--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ensae-mlops
+  name: ensae-mlops-equipe1
 spec:
   project: default
   source:
